Builds and runs with latest Cascara